modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-proc-mount/test_samples/constraint_templates/pss_baseline/001-allowed-default-procmount-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-default-procmount-container
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
      securityContext:
        procMount: Default
