modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-proc-mount/test_samples/constraint_templates/pss_baseline/003-allowed-no-procmount.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-no-procmount
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
