modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-proc-mount/test_samples/constraint_templates/pss_baseline/006-disallowed-unmasked-procmount-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed-unmasked-procmount-pod
  namespace: testns
spec:
  securityContext:
    procMount: Unmasked
  containers:
    - name: nginx
      image: nginx
