modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-proc-mount/test_samples/constraint_templates/security_policy/009-allowed-multiple-containers-both-allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-multiple-containers-both-allowed
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
      securityContext:
        procMount: Default
    - name: redis
      image: redis
      securityContext:
        procMount: Default
