modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-proc-mount/test_suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-allowed-proc-mount
tests:
  - name: pss-baseline
    template: ../../templates/security/allowed-proc-mount.yaml
    constraint: constraint_pss_baseline.yaml
    cases:
      - name: 003-allowed-no-procmount
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/constraint_templates/pss_baseline/003-allowed-no-procmount.yaml
        assertions:
          - violations: no
      - name: 001-allowed-default-procmount-container
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/constraint_templates/pss_baseline/001-allowed-default-procmount-container.yaml
        assertions:
          - violations: no
      - name: 002-allowed-default-procmount-pod
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/constraint_templates/pss_baseline/002-allowed-default-procmount-pod.yaml
        assertions:
          - violations: no
      - name: 005-disallowed-unmasked-procmount-container
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/constraint_templates/pss_baseline/005-disallowed-unmasked-procmount-container.yaml
        assertions:
          - violations: yes
      - name: 006-disallowed-unmasked-procmount-pod
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/constraint_templates/pss_baseline/006-disallowed-unmasked-procmount-pod.yaml
        assertions:
          - violations: no
      - name: 004-disallowed-multiple-containers-one-unmasked
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/constraint_templates/pss_baseline/004-disallowed-multiple-containers-one-unmasked.yaml
        assertions:
          - violations: yes
  - name: security-policy
    template: ../../templates/security/allowed-proc-mount.yaml
    constraint: constraint_security_policy.yaml
    cases:
      - name: 010-allowed-no-procmount
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/constraint_templates/security_policy/010-allowed-no-procmount.yaml
        assertions:
          - violations: no
      - name: 011-disallowed-unmasked-procmount-container
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/constraint_templates/security_policy/011-disallowed-unmasked-procmount-container.yaml
        assertions:
          - violations: yes
      - name: 007-allowed-default-procmount-container
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/constraint_templates/security_policy/007-allowed-default-procmount-container.yaml
        assertions:
          - violations: no
      - name: 009-allowed-multiple-containers-both-allowed
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/constraint_templates/security_policy/009-allowed-multiple-containers-both-allowed.yaml
        assertions:
          - violations: no
  - name: pss-baseline-with-exception
    template: ../../templates/security/allowed-proc-mount.yaml
    constraint: constraint_pss_baseline.yaml
    cases:
      - name: 015-019-allowed-by-exception-unmasked-container
        inventory:
          - ../common/test_samples/ns.yaml
          - test_samples/security_policy_exceptions/exceptions/015-allow-unmasked.yaml
        object: test_samples/security_policy_exceptions/pods/019-allowed-by-exception-unmasked-container.yaml
        assertions:
          - violations: no
      - name: 014-017-allowed-by-exception-default-container
        inventory:
          - ../common/test_samples/ns.yaml
          - test_samples/security_policy_exceptions/exceptions/014-allow-default.yaml
        object: test_samples/security_policy_exceptions/pods/017-allowed-by-exception-default-container.yaml
        assertions:
          - violations: no
      - name: 014-021-disallowed-by-exception-procmount-mismatch
        inventory:
          - ../common/test_samples/ns.yaml
          - test_samples/security_policy_exceptions/exceptions/014-allow-default.yaml
        object: test_samples/security_policy_exceptions/pods/021-disallowed-by-exception-procmount-mismatch.yaml
        assertions:
          - violations: yes
      - name: 022-disallowed-no-exception-label
        inventory:
          - ../common/test_samples/ns.yaml
        object: test_samples/security_policy_exceptions/pods/022-disallowed-no-exception-label.yaml
        assertions:
          - violations: yes
      - name: 014-020-disallowed-by-exception-multiple-containers-one-mismatch
        inventory:
          - ../common/test_samples/ns.yaml
          - test_samples/security_policy_exceptions/exceptions/014-allow-default.yaml
        object: test_samples/security_policy_exceptions/pods/020-disallowed-by-exception-multiple-containers-one-mismatch.yaml
        assertions:
          - violations: yes
  - name: security-policy-with-exception
    template: ../../templates/security/allowed-proc-mount.yaml
    constraint: constraint_security_policy.yaml
    cases:
      - name: 014-018-allowed-by-exception-mismatch-but-constraint-allows
        inventory:
          - ../common/test_samples/ns.yaml
          - test_samples/security_policy_exceptions/exceptions/014-allow-default.yaml
        object: test_samples/security_policy_exceptions/pods/018-allowed-by-exception-mismatch-but-constraint-allows.yaml
        assertions:
          - violations: no
      - name: 016-023-disallowed-by-exception-empty-spec
        inventory:
          - ../common/test_samples/ns.yaml
          - test_samples/security_policy_exceptions/exceptions/016-empty-spec.yaml
        object: test_samples/security_policy_exceptions/pods/023-disallowed-by-exception-empty-spec.yaml
        assertions:
          - violations: yes
      - name: 024-025-allowed-by-container-exception-unmasked
        inventory:
          - ../common/test_samples/ns.yaml
          - test_samples/security_policy_exceptions/exceptions/024-allow-unmasked-container.yaml
        object: test_samples/security_policy_exceptions/pods/024-allowed-by-container-exception-unmasked.yaml
        assertions:
          - violations: yes
